# packet

./: CMakeLists.txt  LICENSE  README.md
include/packet/: buffer_part.h  defs.h  packet.h  packet_impl.h
packet/include/packet/: buffer_part.h  buffer_part_impl.h  data_part.h  data_reader.h  data_section_handler.h  debug_helper.h  defs.h  header_part.h  packet.h  packet_helper.h  packet_impl.h  part_defs.h  pattern.h  pattern_part.h  pattern_section_handler.h  section_handler_base.h  tail_part.h  test_defs.h
packet/src/: packet.cpp  test.cpp
src/: test.cpp  test_helpers.hpp
